kubernetes/apps/base/observability/snmp-exporter/app/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: snmp-exporter
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-snmp-exporter
  egress:
    # Allow DNS resolution
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Allow SNMP (UDP 161) to Servers VLAN for UPS devices
    - toCIDR:
        - 192.168.50.0/24
      toPorts:
        - ports:
            - port: "161"
              protocol: UDP
  ingress:
    # Allow Prometheus scraping
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9116"
              protocol: TCP
